--- a/beep-config.h.in
+++ b/beep-config.h.in
@@ -5,6 +5,8 @@
  * \author Copyright (C) 2010-2013 Gerfried Fuchs
  * \author Copyright (C) 2013-2018 Hans Ulrich Niedermann
  *
+ * @configure_input@
+ *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or
