XXX first shot at main event loop
First shot at main event loop with timer_create(), signalfd(),
and (later) possibly STDIN_FILENO.

TODO: Support -c and -s, and make sense of -d/-D

--- a/Makefile.am
+++ b/Makefile.am
@@ -45,6 +45,8 @@ EXTRA_DIST    += beep-driver-noop.c
 beep_SOURCES  += beep-driver.h
 beep_SOURCES  += beep-drivers.h
 beep_SOURCES  += beep-drivers.c
+beep_SOURCES  += beep-event-loop.c
+beep_SOURCES  += beep-event-loop.h
 beep_SOURCES  += beep-library.c
 beep_SOURCES  += beep-library.h
 beep_SOURCES  += beep-main.c
