Change buildsystem to automake
Change buildsystem from custom GNUmakefile to standard automake.

This allows builds with the standard invocation of

    autoreconf -if      # if not building from dist tarball
    ./configure
    make
    sudo make install

The configure.ac is based on the output of autoscan, with quite a
bit of manual work added on top.

Uses the ancient serial-tests test harness in order to re-use the
existing run-tests script.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,21 @@
 # Files that should not be tracked by Git
 
+# autoreconf
+Makefile.in
+/aclocal.m4
+/auto-aux/
+/auto-config.h.in
+/autom4te.cache/
+/configure
+
+# configure
+.deps/
+Makefile
+/auto-config.h
+/config.log
+/config.status
+/stamp-h1
+
 # The compiled executables
 /beep
 /*.clang
@@ -37,6 +53,7 @@
 /tarball-git-dist/
 /beep-*.tar.gz
 /beep-*.tar.xz
+/tests/run-tests
 
 # Test results
 /tests/*.actual.output.new
