Update Doxygen.in file to doxygen 1.9.5
Update Doxygen.in file to doxygen 1.9.5, and have configure script
check the doxygen version found before the Makefile.am uses it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -146,7 +146,7 @@ CLEANFILES    += Doxyfile
 Doxyfile: Doxyfile.in Makefile
 	$(SED) $(REPLACEMENTS) < $< > $@
 
-if HAVE_TOOL_DOXYGEN
+if HAVE_TOOL_VERSION_DOXYGEN
 CLEANFILES += doxygen.stamp
 doxygen.stamp: Doxyfile $(BUILT_SOURCES) $(beep_SOURCES)
 	$(DOXYGEN) $<
