--- a/m4/Makefile-files
+++ b/m4/Makefile-files
@@ -1,4 +1,5 @@
 # -*- makefile-automake -*-
 
+EXTRA_DIST += %reldir%/sb-prog-doxygen.m4
 EXTRA_DIST += %reldir%/sb-prog.m4
 EXTRA_DIST += %reldir%/sb-summary.m4
